# zmq-cpp-python

./: .gitignore  README.md  conandata.yml  docker-compose.yml
.github/workflows/: cmake-single-platform.yml
client/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Dockerfile  build.ninja  cmake_install.cmake  conandata.yml  main.cpp  zmq_client
client/libraries/: command.cpp  command.hpp  security.cpp  security.hpp
server/: Dockerfile  requirements.txt  server.py
server/helpers/: Functions.py
server/models/: Command.py
